# AI-Customer-Service

./: .dockerignore  .env.example  .gitignore  .gitmodules  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pipeline.py  pyproject.toml  requirements.txt  server.py  stress_test.py
.github/workflows/: docker-publish.yml
agents/: base.py  classifier.py  critic.py  executor.py  verifier.py
app/: config.py  deps.py  limiter.py  main.py  sessions.py
app/middleware/: request_id.py
app/routers/: chat.py  health.py
app/schemas/: chat.py
db_api/: __init__.py
db_api/DataManagingApis/: ChangeSchoolInfoApis.py  ChangeTeacherInfoApis.py
db_api/DataQueryApis/: GetAreaInfoApis.py  GetExamInfoApis.py  GetSchoolInfoApis.py  GetStudentInfoApis.py  GetTeacherInfoApis.py
rag/: document.py  retriever.py
static/: index.html
utils/: logger.py  web_fetch.py
