[project]
name = "cphos-ai-customer-service"
version = "0.1.0"
description = "CPHOS AI Customer Service — RAG + multi-agent Q&A system"
requires-python = ">=3.12"

dependencies = [
    "openai>=2.30.0",
    "numpy>=2.4.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
pdf = [
    "PyMuPDF>=1.23.0",
]

[project.scripts]
cphos-chat = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agents", "rag", "utils"]
artifacts = ["*.py"]

[tool.hatch.build.targets.wheel.sources]
"" = ""
